# firn

./: .bazelrc  .gitignore  BAZEL.md  BUILD.bazel  MODULE.bazel  Makefile  README.md  ROADMAP.md  bazel-bin  bazel-out  bazel-testlogs  bazel-turbo-polars  go.mod
benchmarks/: AMEX_BENCHMARKS.md  BUILD.bazel  PERFORMANCE_RESULTS.md  README.md  comparison_test.go
cmd/schema_inspector/: BUILD.bazel  main.go
pkg/polars/: BUILD.bazel  dataframe.go  dataframe_test.go  expr.go  opcodes.go  sort.go  turbo_polars.h
polars/: BUILD.bazel  cast_test.go  dataframe.go  dataframe_darwin_arm64.go  dataframe_linux_amd64.go  dataframe_test.go  expr.go  firn.h  join.go  opcodes.go  sort.go  types.go
rust/: BUILD.bazel  Cargo.toml  metadata.json
rust/src/: dataframe.rs  execution.rs  expr.rs  io.rs  lib.rs  opcodes.rs  types.rs
rust/tests/: BUILD.bazel  integration_tests.rs  parquet_integration_test.rs
scripts/: build_rust.sh  generate_large_csv.py  inspect_groupby.py  test_python_groupby.py
scripts/testdata/: BUILD.bazel
testdata/: BUILD.bazel  README.md  large_sample.csv  sample.csv
