module(
    name = "firn",
    version = "0.1.0",
)

# Bazel Skylib
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Go rules
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# Rust rules
bazel_dep(name = "rules_rust", version = "0.48.0")

# CC rules (required for cc_library wrapper around Rust static library)
bazel_dep(name = "rules_cc", version = "0.0.9")

# Platforms for cross-compilation
bazel_dep(name = "platforms", version = "0.0.8")

# Go toolchain
go = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go.download(version = "1.23.0")

# Use recent nightly Rust with edition 2024 support
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
    versions = ["nightly/2024-09-09"],  # Match your system nightly date
)

# Rust dependencies handled by cargo directly (hybrid approach)
# No need for crate_universe - cargo handles dependency resolution

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Use all Go dependencies
use_repo(
    go_deps,
    "com_github_stretchr_testify",
)
