load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "benchmarks",
    size = "large",
    timeout = "long",
    srcs = ["comparison_test.go"],
    args = [
        "-test.bench=.",
        "-test.benchmem",
    ],
    data = glob([
        "datasets/*",
    ]),
    deps = [
        "//pkg/polars",
        "@com_github_stretchr_testify//require",
    ],
)
