load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "benchmarks",
    size = "large",
    timeout = "long",
    srcs = ["comparison_test.go"],
    args = [
        "-test.bench=.",
        "-test.benchmem",
    ],
    data = glob([
        "datasets/*",
    ]),
    deps = [
        "//pkg/polars",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "benchmarks_test",
    srcs = ["amex_benchmark_test.go"],
    deps = [
        "@com_github_miretskiy_firn//polars:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
