load("@rules_go//go:def.bzl", "go_library", "go_test")

# Main Go library with CGO integration using pre-compiled libraries
go_library(
    name = "polars",
    srcs = [
        "dataframe.go",
        "dataframe_darwin_arm64.go",
        "dataframe_linux_amd64.go",
        "expr.go", 
        "opcodes.go",
        "sort.go",
        "firn.h",
    ],
    cgo = True,
    importpath = "github.com/miretskiy/firn/polars",
    visibility = ["//visibility:public"],
)

# Go tests
go_test(
    name = "polars_test",
    srcs = [
        "dataframe_test.go",
    ],
    data = [
        "//testdata",
        "//scripts/testdata",
    ],
    embed = [":polars"],
    deps = [
        "@com_github_stretchr_testify//require",
    ],
)
