load("@rules_go//go:def.bzl", "go_library", "go_test")

# Main Go library with CGO integration
go_library(
    name = "polars",
    srcs = [
        "dataframe.go",
        "dataframe_darwin_arm64.go",
        "dataframe_linux_amd64.go",
        "expr.go",
        "firn.h",
        "join.go",
        "opcodes.go",
        "sort.go",
    ],
    cgo = True,
    cdeps = ["//rust:firn_cc"],
    importpath = "github.com/miretskiy/turbo-polars/polars",
    visibility = ["//visibility:public"],
)

# Go tests
go_test(
    name = "polars_test",
    srcs = ["dataframe_test.go"],
    data = [
        "//scripts/testdata",
        "//testdata",
    ],
    embed = [":polars"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stretchr_testify//require",
    ],
)
