load("@rules_cc//cc:defs.bzl", "cc_library")

# Hybrid Rust Build Approach
#
# We use a hybrid approach instead of pure Bazel rules_rust for the following reasons:
#
# 1. Edition 2024 Compatibility: Pure Bazel approach fails because polars dependencies
#    like `comfy-table v7.2.1` require `edition2024`, which is not supported by the
#    Cargo 1.79.0 version that rules_rust currently uses.
#
# 2. Dependency Management: The Rust ecosystem moves fast, and cargo handles complex
#    dependency resolution better than crate_universe for large dependency trees.
#
# 3. Build Performance: cargo's incremental compilation and caching work well for
#    iterative development.
#
# 4. Maintenance: This approach is simpler and more maintainable than complex
#    pure Bazel configurations that would need frequent updates.
#
# Future Migration: When rules_rust supports newer Cargo versions with edition2024,
# we can consider migrating to a pure Bazel approach.

# Simple hybrid approach: use shell to call cargo directly
# This keeps it simple and maintainable without complex Bazel Rust rules

genrule(
    name = "rust_build",
    srcs = glob([
        "src/**/*.rs",
        "Cargo.toml",
        "Cargo.lock",
    ]),
    outs = [
        "libfirn.a",
    ],
    cmd = """
        # Build using system cargo in the rust directory
        cd rust
        cargo build --release
        
        # Copy the static library to Bazel's expected location
        cp target/release/libfirn.a ../$(location libfirn.a)
    """,
    visibility = ["//visibility:public"],
)

# CC library wrapper for CGO compatibility
# The genrule produces a static library file, but CGO needs a proper cc_library
# target that provides the cc providers for linking.
cc_library(
    name = "firn_cc",
    srcs = [":rust_build"],
    visibility = ["//visibility:public"],
)

# Alias for compatibility with existing Go BUILD file
alias(
    name = "firn_static",
    actual = ":firn_cc",
    visibility = ["//visibility:public"],
)

# Cross-compilation targets for go get support
genrule(
    name = "rust_build_linux_amd64",
    srcs = glob([
        "src/**/*.rs", 
        "Cargo.toml",
        "Cargo.lock",
    ]),
    outs = ["libfirn_linux_amd64.a"],
    cmd = """
        cd rust
        cargo build --release --target x86_64-unknown-linux-gnu
        cp target/x86_64-unknown-linux-gnu/release/libfirn.a ../$(location libfirn_linux_amd64.a)
    """,
    visibility = ["//visibility:public"],
)

genrule(
    name = "rust_build_darwin_arm64", 
    srcs = glob([
        "src/**/*.rs",
        "Cargo.toml", 
        "Cargo.lock",
    ]),
    outs = ["libfirn_darwin_arm64.a"],
    cmd = """
        cd rust
        cargo build --release --target aarch64-apple-darwin
        cp target/aarch64-apple-darwin/release/libfirn.a ../$(location libfirn_darwin_arm64.a)
    """,
    visibility = ["//visibility:public"],
)

# Target to build pre-compiled libraries for distribution
genrule(
    name = "build_precompiled_libs",
    srcs = glob([
        "src/**/*.rs",
        "Cargo.toml", 
        "Cargo.lock",
    ]),
    outs = [
        "lib/libfirn_darwin_arm64.a",
        "lib/libfirn_linux_amd64.a",
    ],
    cmd = """
        # Create lib directory
        mkdir -p lib
        
        # Build for darwin/arm64
        cd rust
        cargo build --release --target aarch64-apple-darwin
        cp target/aarch64-apple-darwin/release/libfirn.a ../lib/libfirn_darwin_arm64.a
        
        # Build for linux/amd64
        cargo build --release --target x86_64-unknown-linux-gnu
        cp target/x86_64-unknown-linux-gnu/release/libfirn.a ../lib/libfirn_linux_amd64.a
        
        # Copy to Bazel output locations
        cp ../lib/libfirn_darwin_arm64.a ../$(location lib/libfirn_darwin_arm64.a)
        cp ../lib/libfirn_linux_amd64.a ../$(location lib/libfirn_linux_amd64.a)
    """,
    visibility = ["//visibility:public"],
)
