[package]
name = "turbo-polars"
version = "0.1.0"
edition = "2021"

[lib]
name = "turbo_polars"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
polars = { version = "0.44", features = [
    "lazy",
    "csv",
    "json", 
    "parquet",
    "strings",
    "temporal",
    "dtype-full",
    "regex",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
