load("@rules_go//go:def.bzl", "go_library", "go_test")

# Main Go library with CGO integration
go_library(
    name = "polars",
    srcs = [
        "dataframe.go",
        "expr.go",
        "opcodes.go",
        "sort.go",
        "turbo_polars.h",
    ],
    cgo = True,
    clinkopts = [
        "lib/libturbo_polars.a",
        "-ldl",
        "-lm",
    ],
    copts = ["-Ipkg/polars"],
    data = ["//rust:turbo_polars_static"],
    importpath = "github.com/miretskiy/turbo-polars/pkg/polars",
    visibility = ["//visibility:public"],
)

# Go tests
go_test(
    name = "polars_test",
    srcs = ["dataframe_test.go"],
    data = [
        "//scripts/testdata",
        "//testdata",
    ],
    embed = [":polars"],
    deps = [
        "@com_github_stretchr_testify//require",
    ],
)
